--- a/package.json
+++ b/package.json
@@ -4,5 +4,17 @@
   "workspaces": [
     "packages/*",
     "examples/*"
-  ]
+  ],
+  "scripts": {
+    "check.all": "bun run check.types && bun run check.fmt && bun run check.lint",
+    "check.all.fix": "bun run check.types && bun run check.fmt.fix && bun run check.lint.fix",
+    "check.fmt": "biome format ./src",
+    "check.fmt.fix": "biome format --write ./src",
+    "check.lint": "biome lint ./src",
+    "check.lint.fix": "biome check --apply ./src",
+    "check.types": "tsc --noEmit"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.7.1"
+  }
 }
