--- a/packages/cloudterms-react/package.json
+++ b/packages/cloudterms-react/package.json
@@ -7,8 +7,7 @@
     "publish": "npm publish --access public"
   },
   "dependencies": {
-    "@cloudterms/js": "0.0.2",
-    "react-html-parser": "^2.0.2"
+    "@cloudterms/js": "^0.0.2"
   },
   "devDependencies": {
     "@types/bun": "latest",
