--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "examples/*"
   ],
   "scripts": {
+    "build.all": "bun scripts/build-all.ts",
     "check.all": "bun run check.types && bun run check.fmt && bun run check.lint",
     "check.all.fix": "bun run check.types && bun run check.fmt.fix && bun run check.lint.fix",
     "check.fmt": "biome format ./src",
     "check.fmt.fix": "biome format --write ./src",
     "check.lint": "biome lint ./src",
     "check.lint.fix": "biome check --apply ./src",
-    "check.types": "tsc --noEmit"
+    "check.types": "tsc --noEmit",
+    "publish.all": "bun scripts/publish-all.ts",
+    "start.react-vite": "cd examples/react-vite && bun dev"
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.1"
