--- a/packages/cloudterms-react/package.json
+++ b/packages/cloudterms-react/package.json
@@ -13,7 +13,8 @@
     "@types/bun": "latest",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "bunchee": "^5.1.2"
+    "bunchee": "^5.1.2",
+    "tailwindcss": "^3.4.3"
   },
   "peerDependencies": {
     "typescript": "^5.0.0",
