--- a/packages/cloudterms-react/package.json
+++ b/packages/cloudterms-react/package.json
@@ -3,7 +3,9 @@
   "module": "./dist/es/index.js",
   "type": "module",
   "scripts": {
-    "build": "bunchee",
+    "build": "bun run build.css && bun run build.js",
+    "build.css": "tailwindcss -i ./src/styles.css -o ./dist/index.css --minify",
+    "build.js": "bunchee",
     "publish": "npm publish --access public"
   },
   "dependencies": {
@@ -13,8 +15,7 @@
     "@types/bun": "latest",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "bunchee": "^5.1.2",
-    "tailwindcss": "^3.4.3"
+    "bunchee": "5.1.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0",
