--- a/examples/hono-api/package.json
+++ b/examples/hono-api/package.json
@@ -5,7 +5,7 @@
     "dev": "PORT=3002 bun run --hot src/index.ts"
   },
   "dependencies": {
-    "@cloudterms/js": "workspace:*",
+    "@cloudterms/js": "^0.0.3",
     "hono": "4.3.1"
   },
   "devDependencies": {
