--- a/examples/js-sdk/package.json
+++ b/examples/js-sdk/package.json
@@ -3,7 +3,7 @@
   "module": "index.ts",
   "type": "module",
   "dependencies": {
-    "@cloudterms/js": "workspace:*"
+    "@cloudterms/js": "^0.0.3"
   },
   "devDependencies": {
     "@types/bun": "latest"
