--- a/examples/react-vite/package.json
+++ b/examples/react-vite/package.json
@@ -7,7 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@cloudterms/react": "workspace:*",
+    "@cloudterms/react": "0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
