--- a/packages/cloudterms-react/package.json
+++ b/packages/cloudterms-react/package.json
@@ -2,13 +2,12 @@
   "name": "@cloudterms/react",
   "module": "./dist/es/index.js",
   "type": "module",
-  "version": "0.0.3",
+  "version": "0.0.5",
   "scripts": {
-    "build": "bunchee",
-    "publish": "npm publish --access public"
+    "build": "bunchee"
   },
   "dependencies": {
-    "@cloudterms/js": "0.0.2"
+    "@cloudterms/js": "0.0.3"
   },
   "devDependencies": {
     "@types/bun": "latest",
