--- a/packages/cloudterms-next-js/package.json
+++ b/packages/cloudterms-next-js/package.json
@@ -3,13 +3,12 @@
   "module": "./dist/es/index.js",
   "type": "module",
   "private": false,
-  "version": "0.0.3",
+  "version": "0.0.5",
   "scripts": {
-    "build": "bunchee",
-    "publish": "npm publish --access public"
+    "build": "bunchee"
   },
   "dependencies": {
-    "@cloudterms/react": "0.0.1"
+    "@cloudterms/react": "^0.0.1"
   },
   "devDependencies": {
     "@types/bun": "latest",
