--- a/packages/cloudterms-react/package.json
+++ b/packages/cloudterms-react/package.json
@@ -2,12 +2,12 @@
   "name": "@cloudterms/react",
   "module": "./dist/es/index.js",
   "type": "module",
-  "version": "0.0.8",
+  "version": "0.0.12",
   "scripts": {
     "build": "bunchee"
   },
   "dependencies": {
-    "@cloudterms/js": "0.0.8"
+    "@cloudterms/js": "^0.0.10"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -34,6 +34,16 @@
       "require": {
         "types": "./dist/cjs/index.d.cts",
         "default": "./dist/cjs/index.cjs"
+      }
+    },
+    "./server": {
+      "import": {
+        "types": "./dist/es/server.d.ts",
+        "default": "./dist/es/server.js"
+      },
+      "require": {
+        "types": "./dist/cjs/server.d.cts",
+        "default": "./dist/cjs/server.cjs"
       }
     }
   }
