--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@radix-ui/react-checkbox": "1.0.4"
   }
 }
