--- a/packages/cloudterms-react/package.json
+++ b/packages/cloudterms-react/package.json
@@ -4,16 +4,25 @@
   "type": "module",
   "version": "0.0.13",
   "scripts": {
-    "build": "bunchee"
+    "build.css": "tailwindcss -i ./src/styles.css -o ./dist/index.css --minify",
+    "build.js": "bunchee",
+    "build": "rm -rf ./dist && bun run build.js && bun run build.css"
   },
   "dependencies": {
-    "@cloudterms/js": "^0.0.10"
+    "@cloudterms/js": "^0.0.10",
+    "@radix-ui/react-slot": "1.0.2",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
+    "lucide-react": "0.378.0",
+    "tailwind-merge": "2.3.0",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "bunchee": "5.1.2"
+    "bunchee": "5.1.2",
+    "tailwindcss": "3.4.3"
   },
   "peerDependencies": {
     "typescript": "^5.0.0",
