swapped bun/bun workspace for node, pnpm and turbo

--- a/examples/hono-api/tsconfig.json
+++ b/examples/hono-api/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "strict": true,
+    "skipLibCheck": true,
+    "types": ["node"],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx"
   }
