--- a/examples/hono-api/package.json
+++ b/examples/hono-api/package.json
@@ -2,13 +2,16 @@
   "name": "@cloudterms/hono-api-example",
   "type": "module",
   "scripts": {
-    "dev": "PORT=3002 bun run --hot src/index.ts"
+    "clean": "rm -rf dist",
+    "dev": "PORT=3002 tsx watch src/index.ts"
   },
   "dependencies": {
-    "@cloudterms/js": "^0.0.10",
-    "hono": "4.3.1"
+    "@cloudterms/js": "workspace:*",
+    "@hono/node-server": "^1.11.1",
+    "hono": "^4.3.2"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/node": "^20.11.17",
+    "tsx": "^4.7.1"
   }
 }
