--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
   "name": "cloudterms",
   "type": "module",
-  "workspaces": [
-    "packages/*",
-    "examples/*"
-  ],
   "scripts": {
-    "build.all": "bun scripts/build-all.ts",
-    "check.all": "bun run check.types && bun run check.fmt && bun run check.lint",
-    "check.all.fix": "bun run check.types && bun run check.fmt.fix && bun run check.lint.fix",
+    "build": "turbo build",
+    "check.all": "pnpm check.types && pnpm check.fmt && pnpm check.lint",
+    "check.all.fix": "pnpm check.types && pnpm check.fmt.fix && pnpm check.lint.fix",
     "check.circular-deps": "madge --circular --extensions ts,tsx .",
     "check.fmt": "prettier --check .",
     "check.fmt.fix": "prettier --write .",
     "check.lint": "eslint \"./**/*.ts*\" ",
     "check.lint.fix": "eslint \"./**/*.ts*\" --fix",
     "check.types": "tsc --noEmit",
-    "publish.all": "bun scripts/publish-all.ts"
+    "clean": "turbo clean",
+    "dev": "turbo dev"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.2.1",
-    "@types/bun": "latest",
     "@types/eslint": "8.56.10",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
@@ -32,6 +28,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@radix-ui/react-checkbox": "1.0.4"
+    "@radix-ui/react-checkbox": "1.0.4",
+    "turbo": "1.13.3"
   }
 }
