--- a/packages/cloudterms-nextjs/package.json
+++ b/packages/cloudterms-nextjs/package.json
@@ -5,13 +5,14 @@
   "private": false,
   "version": "0.0.5",
   "scripts": {
-    "build": "bunchee"
+    "build": "bunchee",
+    "clean": "rm -rf ./dist ./node_modules ./.turbo && pnpm install"
   },
   "dependencies": {
     "@cloudterms/react": "workspace:*"
   },
   "devDependencies": {
-    "@types/bun": "latest",
+    "@types/node": "latest",
     "bunchee": "^5.1.2"
   },
   "peerDependencies": {
