more fixes for migration to turbo

--- a/examples/hono-api/package.json
+++ b/examples/hono-api/package.json
@@ -3,11 +3,13 @@
   "type": "module",
   "scripts": {
     "clean": "rm -rf dist",
-    "dev": "PORT=3002 tsx watch src/index.ts"
+    "dev": "PORT=3002 pnpm with-env tsx watch src/index.ts",
+    "with-env": "dotenv -e ../../.env -c --"
   },
   "dependencies": {
     "@cloudterms/js": "workspace:*",
     "@hono/node-server": "^1.11.1",
+    "dotenv-cli": "7.4.1",
     "hono": "^4.3.2"
   },
   "devDependencies": {
