--- a/examples/react-vite/package.json
+++ b/examples/react-vite/package.json
@@ -2,13 +2,15 @@
   "name": "@cloudterms/react-vite-example",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build.app": "tsc && vite build",
+    "build.app": "pnpm with-env tsc && vite build",
     "clean": "rm -rf ./dist ./node_modules ./.turbo",
-    "preview": "vite preview"
+    "dev": "PORT=3001 pnpm with-env  vite",
+    "preview": "pnpm with-env vite preview",
+    "with-env": "dotenv -e ../../.env -c --"
   },
   "dependencies": {
     "@cloudterms/react": "workspace:*",
+    "dotenv-cli": "7.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
