--- a/packages/cloudterms-nextjs/package.json
+++ b/packages/cloudterms-nextjs/package.json
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "@types/node": "latest",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "bunchee": "^5.1.2"
   },
   "peerDependencies": {
