--- a/examples/next-js/package.json
+++ b/examples/next-js/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "latest",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "typescript": "^5"
