--- a/packages/cloudterms-react/package.json
+++ b/packages/cloudterms-react/package.json
@@ -2,12 +2,13 @@
   "name": "@cloudterms/react",
   "module": "./dist/es/index.js",
   "type": "module",
-  "version": "0.0.13",
+  "version": "0.0.15",
   "scripts": {
     "build.css": "tailwindcss -i ./src/styles.css -o ./dist/index.css --minify",
     "build.js": "bunchee",
     "build": "pnpm build.js && pnpm build.css",
-    "clean": "rm -rf ./dist ./node_modules ./.turbo && pnpm install"
+    "clean": "rm -rf ./dist ./node_modules ./.turbo && pnpm install",
+    "publish": "pnpm publish --access public"
   },
   "dependencies": {
     "@cloudterms/js": "workspace:*",
