--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "check.types": "tsc --noEmit",
     "clean": "turbo clean",
     "dev": "turbo dev",
-    "publish": "turbo publish"
+    "publish": "pnpm publish -r --access public"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.2.1",
