[react/lib] add config for exporting the bundled css

--- a/packages/cloudterms-react/package.json
+++ b/packages/cloudterms-react/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@cloudterms/js": "workspace:*",
+    "@radix-ui/react-dialog": "1.0.5",
     "@radix-ui/react-slot": "1.0.2",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
@@ -26,9 +27,9 @@
     "tailwindcss": "3.4.3"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "typescript": "^5.0.0"
   },
   "files": [
     "dist"
@@ -55,6 +56,10 @@
         "types": "./dist/cjs/server.d.cts",
         "default": "./dist/cjs/server.cjs"
       }
+    },
+    "./index.css": {
+      "import": "./dist/index.css",
+      "require": "./dist/index.css"
     }
   }
 }
