--- a/packages/cloudterms-react/package.json
+++ b/packages/cloudterms-react/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@cloudterms/js": "workspace:*",
+    "@hookform/resolvers": "3.3.4",
     "@radix-ui/react-dialog": "1.0.5",
+    "@radix-ui/react-label": "2.0.2",
     "@radix-ui/react-slot": "1.0.2",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "lucide-react": "0.378.0",
+    "react-hook-form": "7.51.4",
     "tailwind-merge": "2.3.0",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "zod": "3.23.7"
   },
   "devDependencies": {
     "@types/node": "latest",
