--- a/packages/cloudterms-nextjs/package.json
+++ b/packages/cloudterms-nextjs/package.json
@@ -3,13 +3,13 @@
   "module": "./dist/es/index.js",
   "type": "module",
   "private": false,
-  "version": "0.0.18",
+  "version": "0.0.20",
   "scripts": {
     "build": "bunchee",
     "clean": "rm -rf ./dist ./node_modules ./.turbo && pnpm install"
   },
   "dependencies": {
-    "@cloudterms/react": "0.0.18"
+    "@cloudterms/react": "latest"
   },
   "devDependencies": {
     "@types/node": "latest",
@@ -18,8 +18,8 @@
     "bunchee": "^5.1.2"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0",
-    "next": "^14.0.0"
+    "next": "^14.0.0",
+    "typescript": "^5.0.0"
   },
   "files": [
     "dist"
