--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,14 +9,15 @@
     "update-deps": "ncu -u && pnpm i"
   },
   "dependencies": {
-    "next": "^13.0.6",
+    "next": "14.2.5",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/node": "18.11.10",
-    "typescript": "^4.9.3"
+    "@types/node": "20.14.12",
+    "npm-check-updates": "16.14.20",
+    "typescript": "5.5.4"
   }
 }
