chore: swapped eslint and prettier for biome

--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "type": "module",
   "scripts": {
     "build": "turbo build",
-    "check.all": "pnpm check.types && pnpm check.fmt && pnpm check.lint",
-    "check.all.fix": "pnpm check.types && pnpm check.fmt.fix && pnpm check.lint.fix",
-    "check.circular-deps": "madge --circular --extensions ts,tsx .",
-    "check.fmt": "prettier --check .",
-    "check.fmt.fix": "prettier --write .",
-    "check.lint": "eslint \"./**/*.ts*\" ",
-    "check.lint.fix": "eslint \"./**/*.ts*\" --fix",
-    "check.types": "tsc --noEmit",
+		"check.all": "pnpm check.types && biome check .",
+		"check.all.fix": "pnpm check.types && biome check --write .",
+		"check.circular-deps": "madge --circular --extensions ts,tsx .",
+		"check.fmt": "biome format .",
+		"check.fmt.fix": "biome format --write .",
+		"check.lint": "biome lint .",
+		"check.lint.fix": "biome lint --write .",
+		"check.types": "tsc --noEmit",
     "clean": "turbo clean",
     "dev": "turbo dev",
     "dev.docs": "pnpm --filter docs dev",
@@ -20,6 +20,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@biomejs/biome": "1.8.3",
     "@ianvs/prettier-plugin-sort-imports": "4.2.1",
     "@types/eslint": "8.56.10",
     "@typescript-eslint/eslint-plugin": "7.8.0",
