--- a/packages/cloudterms-react/package.json
+++ b/packages/cloudterms-react/package.json
@@ -1,70 +1,68 @@
 {
-  "name": "@cloudterms/react",
-  "module": "./dist/es/index.js",
-  "type": "module",
-  "version": "0.0.21",
-  "scripts": {
-    "build.css": "tailwindcss -i ./src/styles.css -o ./dist/index.css --minify",
-    "build.js": "bunchee",
-    "build": "pnpm build.js && pnpm build.css",
-    "clean": "rm -rf ./dist ./node_modules ./.turbo && pnpm install"
-  },
-  "dependencies": {
-    "@cloudterms/js": "latest",
-    "@hookform/resolvers": "3.3.4",
-    "@radix-ui/react-checkbox": "1.0.4",
-    "@radix-ui/react-dialog": "1.0.5",
-    "@radix-ui/react-label": "2.0.2",
-    "@radix-ui/react-slot": "1.0.2",
-    "class-variance-authority": "0.7.0",
-    "clsx": "2.1.1",
-    "lucide-react": "0.378.0",
-    "react-hook-form": "7.51.4",
-    "tailwind-merge": "2.3.0",
-    "tailwindcss-animate": "1.0.7",
-    "zod": "3.23.7"
-  },
-  "devDependencies": {
-    "@types/node": "latest",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "bunchee": "5.1.2",
-    "tailwindcss": "3.4.3"
-  },
-  "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "typescript": "^5.0.0"
-  },
-  "files": [
-    "dist"
-  ],
-  "main": "./dist/es/index.js",
-  "types": "./dist/es/index.d.ts",
-  "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/es/index.d.ts",
-        "default": "./dist/es/index.js"
-      },
-      "require": {
-        "types": "./dist/cjs/index.d.cts",
-        "default": "./dist/cjs/index.cjs"
-      }
-    },
-    "./server": {
-      "import": {
-        "types": "./dist/es/server.d.ts",
-        "default": "./dist/es/server.js"
-      },
-      "require": {
-        "types": "./dist/cjs/server.d.cts",
-        "default": "./dist/cjs/server.cjs"
-      }
-    },
-    "./index.css": {
-      "import": "./dist/index.css",
-      "require": "./dist/index.css"
-    }
-  }
+	"name": "@cloudterms/react",
+	"module": "./dist/es/index.js",
+	"type": "module",
+	"version": "0.0.21",
+	"scripts": {
+		"build.css": "tailwindcss -i ./src/styles.css -o ./dist/index.css --minify",
+		"build.js": "bunchee",
+		"build": "pnpm build.js && pnpm build.css",
+		"clean": "rm -rf ./dist ./node_modules ./.turbo && pnpm install"
+	},
+	"dependencies": {
+		"@cloudterms/js": "latest",
+		"@hookform/resolvers": "3.3.4",
+		"@radix-ui/react-checkbox": "1.0.4",
+		"@radix-ui/react-dialog": "1.0.5",
+		"@radix-ui/react-label": "2.0.2",
+		"@radix-ui/react-slot": "1.0.2",
+		"class-variance-authority": "0.7.0",
+		"clsx": "2.1.1",
+		"lucide-react": "0.378.0",
+		"react-hook-form": "7.51.4",
+		"tailwind-merge": "2.3.0",
+		"tailwindcss-animate": "1.0.7",
+		"zod": "3.23.7"
+	},
+	"devDependencies": {
+		"@types/node": "latest",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"bunchee": "5.1.2",
+		"tailwindcss": "3.4.3"
+	},
+	"peerDependencies": {
+		"react": "^18",
+		"react-dom": "^18",
+		"typescript": "^5.0.0"
+	},
+	"files": ["dist"],
+	"main": "./dist/es/index.js",
+	"types": "./dist/es/index.d.ts",
+	"exports": {
+		".": {
+			"import": {
+				"types": "./dist/es/index.d.ts",
+				"default": "./dist/es/index.js"
+			},
+			"require": {
+				"types": "./dist/cjs/index.d.cts",
+				"default": "./dist/cjs/index.cjs"
+			}
+		},
+		"./server": {
+			"import": {
+				"types": "./dist/es/server.d.ts",
+				"default": "./dist/es/server.js"
+			},
+			"require": {
+				"types": "./dist/cjs/server.d.cts",
+				"default": "./dist/cjs/server.cjs"
+			}
+		},
+		"./index.css": {
+			"import": "./dist/index.css",
+			"require": "./dist/index.css"
+		}
+	}
 }
