--- a/examples/hono-api/package.json
+++ b/examples/hono-api/package.json
@@ -4,16 +4,17 @@
 	"scripts": {
 		"clean": "rm -rf dist",
 		"dev": "PORT=3002 pnpm with-env tsx watch src/index.ts",
+		"update-deps": "ncu -u && pnpm i",
 		"with-env": "dotenv -e ../../.env -c --"
 	},
 	"dependencies": {
 		"@cloudterms/js": "workspace:*",
-		"@hono/node-server": "^1.11.1",
-		"dotenv-cli": "7.4.1",
-		"hono": "^4.3.2"
+		"@hono/node-server": "^1.12.0",
+		"dotenv-cli": "7.4.2",
+		"hono": "^4.5.3"
 	},
 	"devDependencies": {
 		"@types/node": "latest",
-		"tsx": "^4.7.1"
+		"tsx": "^4.16.2"
 	}
 }
