--- a/examples/next-js/package.json
+++ b/examples/next-js/package.json
@@ -6,12 +6,13 @@
 		"clean": "rm -rf ./.next ./node_modules ./.turbo",
 		"dev": "PORT=3003 pnpm with-env next dev",
 		"start": "pnpm with-env next start",
+		"update-deps": "ncu -u && pnpm i",
 		"with-env": "dotenv -e ../../.env -c --"
 	},
 	"dependencies": {
 		"@cloudterms/nextjs": "workspace:*",
-		"dotenv-cli": "7.4.1",
-		"next": "14.2.3",
+		"dotenv-cli": "7.4.2",
+		"next": "14.2.5",
 		"react": "^18",
 		"react-dom": "^18"
 	},
