--- a/packages/cloudterms-nextjs/package.json
+++ b/packages/cloudterms-nextjs/package.json
@@ -6,7 +6,8 @@
 	"version": "0.0.21",
 	"scripts": {
 		"build": "bunchee",
-		"clean": "rm -rf ./dist ./node_modules ./.turbo && pnpm install"
+		"clean": "rm -rf ./dist ./node_modules ./.turbo && pnpm install",
+		"update-deps": "ncu -u && pnpm i"
 	},
 	"dependencies": {
 		"@cloudterms/react": "latest"
@@ -15,7 +16,7 @@
 		"@types/node": "latest",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
-		"bunchee": "^5.1.2"
+		"bunchee": "5.3.1"
 	},
 	"peerDependencies": {
 		"next": "^14.0.0",
