--- a/packages/cloudterms-react/package.json
+++ b/packages/cloudterms-react/package.json
@@ -7,29 +7,30 @@
 		"build.css": "tailwindcss -i ./src/styles.css -o ./dist/index.css --minify",
 		"build.js": "bunchee",
 		"build": "pnpm build.js && pnpm build.css",
-		"clean": "rm -rf ./dist ./node_modules ./.turbo && pnpm install"
+		"clean": "rm -rf ./dist ./node_modules ./.turbo && pnpm install",
+		"update-deps": "ncu -u && pnpm i"
 	},
 	"dependencies": {
 		"@cloudterms/js": "latest",
-		"@hookform/resolvers": "3.3.4",
-		"@radix-ui/react-checkbox": "1.0.4",
-		"@radix-ui/react-dialog": "1.0.5",
-		"@radix-ui/react-label": "2.0.2",
-		"@radix-ui/react-slot": "1.0.2",
+		"@hookform/resolvers": "3.9.0",
+		"@radix-ui/react-checkbox": "1.1.1",
+		"@radix-ui/react-dialog": "1.1.1",
+		"@radix-ui/react-label": "2.1.0",
+		"@radix-ui/react-slot": "1.1.0",
 		"class-variance-authority": "0.7.0",
 		"clsx": "2.1.1",
-		"lucide-react": "0.378.0",
-		"react-hook-form": "7.51.4",
-		"tailwind-merge": "2.3.0",
+		"lucide-react": "0.417.0",
+		"react-hook-form": "7.52.1",
+		"tailwind-merge": "2.4.0",
 		"tailwindcss-animate": "1.0.7",
-		"zod": "3.23.7"
+		"zod": "3.23.8"
 	},
 	"devDependencies": {
 		"@types/node": "latest",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
-		"bunchee": "5.1.2",
-		"tailwindcss": "3.4.3"
+		"bunchee": "5.3.1",
+		"tailwindcss": "3.4.7"
 	},
 	"peerDependencies": {
 		"react": "^18",
