--- a/turbo.json
+++ b/turbo.json
@@ -5,18 +5,12 @@
 			"dependsOn": ["^build"],
 			"outputs": ["dist/**"]
 		},
-		"check.all": { "cache": false },
-		"check.circular-deps": { "cache": false },
-		"check.fmt": { "cache": false },
-		"check.fmt.fix": { "cache": false },
-		"check.lint": { "cache": false },
-		"check.lint.fix": { "cache": false },
-		"check.types": { "cache": false },
+		"check": { "cache": false },
+		"check.fix": { "cache": false },
 		"clean": { "cache": false },
 		"dev": {
 			"cache": false,
 			"persistent": true
-		},
-		"update-deps": { "cache": false }
+		}
 	}
 }
