--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -4,9 +4,10 @@
 	"description": "CloudTerms docs",
 	"scripts": {
 		"build": "next build",
+		"check": "tsc --noEmit && biome check .",
+		"check.fix": "tsc --noEmit && biome check --write .",
 		"dev": "PORT=3004 next dev",
-		"start": "next start",
-		"update-deps": "ncu -u && pnpm i"
+		"start": "next start"
 	},
 	"dependencies": {
 		"next": "14.2.5",
@@ -17,7 +18,6 @@
 	},
 	"devDependencies": {
 		"@types/node": "22.0.0",
-		"npm-check-updates": "16.14.20",
 		"typescript": "5.5.4"
 	}
 }
