--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -10,14 +10,14 @@
 		"start": "next start"
 	},
 	"dependencies": {
-		"next": "14.2.5",
-		"nextra": "latest",
-		"nextra-theme-docs": "latest",
+		"next": "14.2.7",
+		"nextra": "2.13.4",
+		"nextra-theme-docs": "2.13.4",
 		"react": "18.3.1",
 		"react-dom": "18.3.1"
 	},
 	"devDependencies": {
-		"@types/node": "22.0.0",
+		"@types/node": "22.5.1",
 		"typescript": "5.5.4"
 	}
 }
