--- a/examples/hono-api/package.json
+++ b/examples/hono-api/package.json
@@ -9,12 +9,12 @@
 	},
 	"dependencies": {
 		"@cloudterms/js": "workspace:*",
-		"@hono/node-server": "^1.12.0",
+		"@hono/node-server": "^1.12.2",
 		"dotenv-cli": "7.4.2",
-		"hono": "^4.5.3"
+		"hono": "^4.5.10"
 	},
 	"devDependencies": {
-		"@types/node": "latest",
-		"tsx": "^4.16.2"
+		"@types/node": "22.5.1",
+		"tsx": "^4.19.0"
 	}
 }
