--- a/examples/js-sdk/package.json
+++ b/examples/js-sdk/package.json
@@ -13,7 +13,7 @@
 		"dotenv-cli": "7.4.2"
 	},
 	"devDependencies": {
-		"@types/node": "latest"
+		"@types/node": "22.5.1"
 	},
 	"peerDependencies": {
 		"typescript": "^5.0.0"
