--- a/examples/next-js/package.json
+++ b/examples/next-js/package.json
@@ -12,14 +12,14 @@
 	"dependencies": {
 		"@cloudterms/nextjs": "workspace:*",
 		"dotenv-cli": "7.4.2",
-		"next": "14.2.5",
-		"react": "^18",
-		"react-dom": "^18"
+		"next": "14.2.7",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
-		"@types/node": "latest",
-		"@types/react": "^18",
-		"@types/react-dom": "^18",
-		"typescript": "^5"
+		"@types/node": "22.5.1",
+		"@types/react": "^18.3.5",
+		"@types/react-dom": "^18.3.0",
+		"typescript": "^5.5.4"
 	}
 }
