--- a/packages/cloudterms-react/package.json
+++ b/packages/cloudterms-react/package.json
@@ -1,71 +1,69 @@
 {
-  "name": "@cloudterms/react",
-  "module": "./dist/es/index.js",
-  "type": "module",
-  "version": "0.0.24",
-  "scripts": {
-    "build.css": "tailwindcss -i ./src/styles.css -o ./dist/index.css --minify",
-    "build.js": "bunchee",
-    "build": "pnpm build.js && pnpm build.css",
-    "check": "tsc --noEmit && biome check .",
-    "check.fix": "tsc --noEmit && biome check --write ."
-  },
-  "dependencies": {
-    "@cloudterms/js": "latest",
-    "@hookform/resolvers": "3.9.0",
-    "@radix-ui/react-checkbox": "1.1.1",
-    "@radix-ui/react-dialog": "1.1.1",
-    "@radix-ui/react-label": "2.1.0",
-    "@radix-ui/react-slot": "1.1.0",
-    "class-variance-authority": "0.7.0",
-    "clsx": "2.1.1",
-    "lucide-react": "0.437.0",
-    "react-hook-form": "7.53.0",
-    "tailwind-merge": "2.5.2",
-    "tailwindcss-animate": "1.0.7",
-    "zod": "3.23.8"
-  },
-  "devDependencies": {
-    "@types/node": "22.5.1",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "bunchee": "5.3.2",
-    "tailwindcss": "3.4.10"
-  },
-  "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "typescript": "^5.0.0"
-  },
-  "files": [
-    "dist"
-  ],
-  "main": "./dist/es/index.js",
-  "types": "./dist/es/index.d.ts",
-  "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/es/index.d.ts",
-        "default": "./dist/es/index.js"
-      },
-      "require": {
-        "types": "./dist/cjs/index.d.cts",
-        "default": "./dist/cjs/index.cjs"
-      }
-    },
-    "./server": {
-      "import": {
-        "types": "./dist/es/server.d.ts",
-        "default": "./dist/es/server.js"
-      },
-      "require": {
-        "types": "./dist/cjs/server.d.cts",
-        "default": "./dist/cjs/server.cjs"
-      }
-    },
-    "./index.css": {
-      "import": "./dist/index.css",
-      "require": "./dist/index.css"
-    }
-  }
+	"name": "@cloudterms/react",
+	"module": "./dist/es/index.js",
+	"type": "module",
+	"version": "0.0.24",
+	"scripts": {
+		"build.css": "tailwindcss -i ./src/styles.css -o ./dist/index.css --minify",
+		"build.js": "bunchee",
+		"build": "pnpm build.js && pnpm build.css",
+		"check": "tsc --noEmit && biome check .",
+		"check.fix": "tsc --noEmit && biome check --write ."
+	},
+	"dependencies": {
+		"@cloudterms/js": "latest",
+		"@hookform/resolvers": "3.9.0",
+		"@radix-ui/react-checkbox": "1.1.1",
+		"@radix-ui/react-dialog": "1.1.1",
+		"@radix-ui/react-label": "2.1.0",
+		"@radix-ui/react-slot": "1.1.0",
+		"class-variance-authority": "0.7.0",
+		"clsx": "2.1.1",
+		"lucide-react": "0.437.0",
+		"react-hook-form": "7.53.0",
+		"tailwind-merge": "2.5.2",
+		"tailwindcss-animate": "1.0.7",
+		"zod": "3.23.8"
+	},
+	"devDependencies": {
+		"@types/node": "22.5.1",
+		"@types/react": "^18.3.5",
+		"@types/react-dom": "^18.3.0",
+		"bunchee": "5.3.2",
+		"tailwindcss": "3.4.10"
+	},
+	"peerDependencies": {
+		"react": "^18",
+		"react-dom": "^18",
+		"typescript": "^5.0.0"
+	},
+	"files": ["dist"],
+	"main": "./dist/es/index.js",
+	"types": "./dist/es/index.d.ts",
+	"exports": {
+		".": {
+			"import": {
+				"types": "./dist/es/index.d.ts",
+				"default": "./dist/es/index.js"
+			},
+			"require": {
+				"types": "./dist/cjs/index.d.cts",
+				"default": "./dist/cjs/index.cjs"
+			}
+		},
+		"./server": {
+			"import": {
+				"types": "./dist/es/server.d.ts",
+				"default": "./dist/es/server.js"
+			},
+			"require": {
+				"types": "./dist/cjs/server.d.cts",
+				"default": "./dist/cjs/server.cjs"
+			}
+		},
+		"./index.css": {
+			"import": "./dist/index.css",
+			"require": "./dist/index.css"
+		}
+	}
 }
